--- a/production/ob_campaign.html
+++ b/production/ob_campaign.html
@@ -89,117 +89,116 @@
 
           <!-- show all list of campaigns -->
           <div class="row">
-
-                        <!-- <div class="col-md-4 col-sm-4 col-xs-12"> -->
-                        <div class="">
-                          <div class="x_panel tile fixed_height_320">
-                            <div class="x_title">
-                              <h2>Campaign list info</h2>
-                              <ul class="nav navbar-right panel_toolbox">
-                                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                </li>
-                                <li class="dropdown">
-                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                  <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Settings 1</a>
-                                    </li>
-                                    <li><a href="#">Settings 2</a>
-                                    </li>
-                                  </ul>
-                                </li>
-                                <li><a class="close-link"><i class="fa fa-close"></i></a>
-                                </li>
-                              </ul>
-                              <div class="clearfix"></div>
-                            </div>
-                            <div class="x_content">
-                              <h4>App Usage across versions</h4>
-                              <div class="widget_summary">
-                                <div class="w_left w_25">
-                                  <span>0.1.5.2</span>
-                                </div>
-                                <div class="w_center w_55">
-                                  <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 66%;">
-                                      <span class="sr-only">60% Complete</span>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="w_right w_20">
-                                  <span>123k</span>
-                                </div>
-                                <div class="clearfix"></div>
-                              </div>
-
-                              <div class="widget_summary">
-                                <div class="w_left w_25">
-                                  <span>0.1.5.3</span>
-                                </div>
-                                <div class="w_center w_55">
-                                  <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
-                                      <span class="sr-only">60% Complete</span>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="w_right w_20">
-                                  <span>53k</span>
-                                </div>
-                                <div class="clearfix"></div>
-                              </div>
-                              <div class="widget_summary">
-                                <div class="w_left w_25">
-                                  <span>0.1.5.4</span>
-                                </div>
-                                <div class="w_center w_55">
-                                  <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-                                      <span class="sr-only">60% Complete</span>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="w_right w_20">
-                                  <span>23k</span>
-                                </div>
-                                <div class="clearfix"></div>
-                              </div>
-                              <div class="widget_summary">
-                                <div class="w_left w_25">
-                                  <span>0.1.5.5</span>
-                                </div>
-                                <div class="w_center w_55">
-                                  <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 5%;">
-                                      <span class="sr-only">60% Complete</span>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="w_right w_20">
-                                  <span>3k</span>
-                                </div>
-                                <div class="clearfix"></div>
-                              </div>
-                              <div class="widget_summary">
-                                <div class="w_left w_25">
-                                  <span>0.1.5.6</span>
-                                </div>
-                                <div class="w_center w_55">
-                                  <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 2%;">
-                                      <span class="sr-only">60% Complete</span>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="w_right w_20">
-                                  <span>1k</span>
-                                </div>
-                                <div class="clearfix"></div>
-                              </div>
-
-                            </div>
-                          </div>
-                        </div>
+            <div class="x_panel">
+              <div class="x_title">
+                <h2>Campaign list info</h2>
+                <ul class="nav navbar-right panel_toolbox">
+                  <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                  </li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><a href="#">Settings 1</a>
+                      </li>
+                      <li><a href="#">Settings 2</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li><a class="close-link"><i class="fa fa-close"></i></a>
+                  </li>
+                </ul>
+                <div class="clearfix"></div>
+              </div>
+              <div class="x_content">
+                <table id="campaign_list_table" class="table table-striped table-bordered table-condensed"></table>
+              </div>
+            </div>
           </div>
+
+
+          <!-- Show detail campaign info tmp-->
+          <div class="row">
+            <div class="x_panel">
+              <div class="x_title">
+                <h2>Campaign detail info</h2>
+                <ul class="nav navbar-right panel_toolbox">
+                  <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                  </li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><a href="#">Settings 1</a>
+                      </li>
+                      <li><a href="#">Settings 2</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li><a class="close-link"><i class="fa fa-close"></i></a>
+                  </li>
+                </ul>
+                <div class="clearfix"></div>
+              </div>
+
+              <div class="x_content">
+                    <form class="form-horizontal form-label-left">
+
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">UUID</label>
+                        <div class="col-md-9 col-sm-9 col-xs-12">
+                          <input type="text" class="form-control" disabled="disabled" placeholder="Default Input">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Name </label>
+                        <div class="col-md-9 col-sm-9 col-xs-12">
+                          <input type="text" class="form-control" disabled="disabled" placeholder="Disabled Input">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Read-Only Input</label>
+                        <div class="col-md-9 col-sm-9 col-xs-12">
+                          <input type="text" class="form-control" readonly="readonly" placeholder="Read-Only Input">
+                        </div>
+                      </div>
+                    </form>
+              </div>
+            </div>
+          </div>
+
+
+
+          <!-- Show detail campaign info -->
+          <div class="row">
+            <div class="x_panel">
+              <div class="x_title">
+                <h2>Campaign detail info</h2>
+                <ul class="nav navbar-right panel_toolbox">
+                  <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                  </li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><a href="#">Settings 1</a>
+                      </li>
+                      <li><a href="#">Settings 2</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li><a class="close-link"><i class="fa fa-close"></i></a>
+                  </li>
+                </ul>
+                <div class="clearfix"></div>
+              </div>
+
+              <div class="x_content">
+                <div id="campaign_detail_info">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
           <!-- Show all list of ob-->
           <div class="row tile_count">
