--- a/production/ob_campaign.html
+++ b/production/ob_campaign.html
@@ -302,9 +302,9 @@
                 </div>
 
                 <div align="right">
-                  <button type="button" id="campaign_detail_button_create" class="btn btn-primary btn-lg">Create</button>
-                  <button type="button" id="campaign_detail_button_update" class="btn btn-success btn-lg">Update</button>
-                  <button type="button" id="campaign_detail_button_delete" class="btn btn-danger btn-lg">Delete</button>
+                  <button type="button" id="campaign_detail_button_create" onclick="bt_create_campaign_detail()" class="btn btn-primary btn-lg">Create</button>
+                  <button type="button" id="campaign_detail_button_update" onclick="bt_update_campaign_detail()" class="btn btn-success btn-lg">Update</button>
+                  <button type="button" id="campaign_detail_button_delete" onclick="bt_delete_campaign_detail()" class="btn btn-danger btn-lg">Delete</button>
                 </div>
               </div> <!-- <div class="x_content"> -->
 
